[gd_scene load_steps=10 format=3 uid="uid://cb72u5fsjwm1h"]

[ext_resource type="Script" path="res://screens/battle/components/hud/hud.gd" id="1_exsbb"]
[ext_resource type="PackedScene" uid="uid://ca3mogffsrh84" path="res://screens/battle/components/team_panel/team_panel.tscn" id="1_wfyy1"]
[ext_resource type="PackedScene" uid="uid://c0lssdojlmc3v" path="res://screens/battle/components/budget/budget.tscn" id="2_4cxg1"]
[ext_resource type="PackedScene" uid="uid://6lknpo3nmdtm" path="res://screens/battle/components/combatant_details/combatant_details.tscn" id="2_dglor"]
[ext_resource type="PackedScene" uid="uid://bilyy5eu7pu25" path="res://screens/battle/components/team_score/team_score.tscn" id="3_gjg7s"]
[ext_resource type="PackedScene" uid="uid://cggbffv86dixn" path="res://utils/draggable/draggable.tscn" id="5_cg7lt"]
[ext_resource type="PackedScene" uid="uid://dh8p01xs27vmk" path="res://screens/battle/components/combatant_for_sale/combatant_for_sale.tscn" id="7_nr813"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_id2jc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qq5xk"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exsbb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="EnemyContent" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_id2jc")

[node name="EnemyTeamPanel" parent="MarginContainer/EnemyContent" instance=ExtResource("1_wfyy1")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(260, 410)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="EnemyCombatantDetails" parent="MarginContainer/EnemyContent" instance=ExtResource("2_dglor")]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 410)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
flip_h = true
show_actions = false

[node name="Draggable" parent="MarginContainer/EnemyContent" node_paths=PackedStringArray("movable_control") instance=ExtResource("5_cg7lt")]
custom_minimum_size = Vector2(195, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
movable_control = NodePath("..")

[node name="PlayerContent" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qq5xk")

[node name="PlayerTeamPanel" parent="MarginContainer/PlayerContent" instance=ExtResource("1_wfyy1")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(260, 410)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="PlayerCombatantDetails" parent="MarginContainer/PlayerContent" instance=ExtResource("2_dglor")]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 410)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Draggable" parent="MarginContainer/PlayerContent" node_paths=PackedStringArray("movable_control") instance=ExtResource("5_cg7lt")]
custom_minimum_size = Vector2(195, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
movable_control = NodePath("..")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="Budget" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_4cxg1")]
custom_minimum_size = Vector2(128, 74)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="CombatantForSale" parent="MarginContainer/HBoxContainer" instance=ExtResource("7_nr813")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PlayerTeamScore" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_gjg7s")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyTeamScore" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_gjg7s")]
unique_name_in_owner = true
layout_mode = 2
custom_position = 1
